Let admins update applications before approval, removed "submit another application" button, fixed infobox alignment on long pages

--- a/frontend/src/components/universal/UserPage.css
+++ b/frontend/src/components/universal/UserPage.css
@@ -92,8 +92,7 @@
 }
 
 .user-infobox-desktop {
-    position: sticky;
-    top: calc(var(--navbar-height) + var(--main-gap-size));
+    position: static;
 }
 
 .user-infobox-mobile {
